2007-12-12  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/TaskListPad.cs,
	  MonoDevelop.Ide.Gui.Pads/MonodocTreePad.cs,
	  MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs: Don't draw shadows in pads
	  (the new docking library does that already).

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Bump add-in versions.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: Updated.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Add property to know when the IDE has
	  been initialized.

2007-12-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs: Remove a debug
	  message.
	* MonoDevelop.Ide.Gui.Pads/InternalLogPad.cs: The internal pad's ILogger
	  needs to be thread-safe.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* ChangeLog, MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/gui.stetic: Minor improvements to OpenFileInSolutionDialog.
	  Makes the OpenFileInSolutionDialog taller by default to show more rows.
	  Matches types against FullyQualifiedName instead of simply Name. Patch
	  by Zach Lute.

2007-12-08  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/OpenFileInSolutionDialog.cs: Type searches now
	  match against FullyQualifiedName.
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.OpenFileInSolutionDialog.cs,
	  gtk-gui/gui.stetic: Made window slightly larger by default.

2007-12-06  Geoff Norton  <gnorton@novell.com>

	* MonoDevelop.Ide.Gui/DisplayBindingService.cs: 
	* MonoDevelop.Ide.Gui/IdeStartup.cs: 
	* MonoDevelop.Ide.Gui/Workbench.cs: 
	* MonoDevelop.Ide.Gui.BrowserDisplayBinding/HtmlViewPane.cs:
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs:
	* MonoDevelop.Ide.Templates/FileTemplate.cs: Access Font/Vfs/Mime information
	  from the PlatformService instead of Gnome directly.